// Database Diagram for Sistema de Proveedores
// Generated from Laravel Migrations

Table users {
  id bigint [pk, increment]
  nombre varchar(255)
  correo varchar(255) [unique]
  fecha_verificacion_correo timestamp [null]
  password varchar(255)
  rfc varchar(13) [null]
  remember_token varchar(100) [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table cache {
  key varchar(255) [pk]
  value mediumtext
  expiration int
}

Table cache_locks {
  key varchar(255) [pk]
  owner varchar(255)
  expiration int
}

Table jobs {
  id bigint [pk, increment]
  queue varchar(255)
  payload longtext
  attempts tinyint
  reserved_at int [null]
  available_at int
  created_at int
}

Table job_batches {
  id varchar(255) [pk]
  name varchar(255)
  total_jobs int
  pending_jobs int
  failed_jobs int
  failed_job_ids longtext
  options mediumtext [null]
  cancelled_at int [null]
  created_at int
  finished_at int [null]
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar(255) [unique]
  connection text
  queue text
  payload longtext
  exception longtext
  failed_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table password_reset_tokens {
  email varchar(255) [pk]
  token varchar(255)
  created_at timestamp [null]
}

Table sessions {
  id varchar(255) [pk]
  user_id bigint [null]
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext
  last_activity int
}

// Geographical Tables
Table pais {
  id bigint [pk, increment]
  nombre varchar(255)
  codigo varchar(10) [unique]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table estado {
  id bigint [pk, increment]
  pais_id bigint [ref: > pais.id]
  nombre varchar(255)
  codigo varchar(10)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table municipio {
  id bigint [pk, increment]
  estado_id bigint [ref: > estado.id]
  nombre varchar(255)
  codigo varchar(10)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table localidad {
  id bigint [pk, increment]
  municipio_id bigint [ref: > municipio.id]
  nombre varchar(255)
  codigo varchar(10)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table tipo_asentamiento {
  id bigint [pk, increment]
  nombre varchar(255)
  codigo varchar(10) [unique]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table asentamiento {
  id bigint [pk, increment]
  localidad_id bigint [ref: > localidad.id]
  tipo_asentamiento_id bigint [ref: > tipo_asentamiento.id]
  nombre varchar(255)
  codigo_postal varchar(10)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table coordenadas {
  id bigint [pk, increment]
  latitud decimal(10,8)
  longitud decimal(11,8)
  created_at timestamp [null]
  updated_at timestamp [null]
}

// Business Tables
Table sector {
  id bigint [pk, increment]
  nombre varchar(255)
  descripcion text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table actividad {
  id bigint [pk, increment]
  sector_id bigint [ref: > sector.id]
  nombre varchar(255)
  codigo varchar(20) [unique]
  descripcion text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table catalogo_archivos {
  id bigint [pk, increment]
  nombre varchar(255)
  descripcion text [null]
  tipo_archivo varchar(100)
  obligatorio boolean [default: false]
  created_at timestamp [null]
  updated_at timestamp [null]
}

// Main Business Tables
Table proveedores {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  razon_social varchar(255)
  rfc varchar(13) [unique]
  tipo_persona enum('fisica', 'moral')
  estatus enum('activo', 'inactivo', 'suspendido') [default: 'activo']
  fecha_registro date
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table instrumentos_notariales {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  numero_instrumento varchar(50)
  fecha_instrumento date
  notario varchar(255)
  notaria varchar(255)
  ciudad varchar(255)
  estado varchar(255)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table tramite {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  user_id bigint [ref: > users.id]
  tipo_tramite enum('inscripcion', 'actualizacion', 'renovacion')
  estatus enum('borrador', 'enviado', 'en_revision', 'aprobado', 'rechazado') [default: 'borrador']
  fecha_envio timestamp [null]
  fecha_revision timestamp [null]
  observaciones text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table direcciones {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  asentamiento_id bigint [ref: > asentamiento.id]
  coordenadas_id bigint [null, ref: > coordenadas.id]
  tipo_direccion enum('fiscal', 'comercial', 'correspondencia')
  calle varchar(255)
  numero_exterior varchar(20)
  numero_interior varchar(20) [null]
  referencias text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table datos_constitutivos {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  instrumento_notarial_id bigint [ref: > instrumentos_notariales.id]
  fecha_constitucion date
  capital_social decimal(15,2)
  objeto_social text
  duracion_sociedad varchar(100) [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table apoderado_legal {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  nombre varchar(255)
  apellido_paterno varchar(255)
  apellido_materno varchar(255) [null]
  rfc varchar(13)
  curp varchar(18) [null]
  cargo varchar(255)
  fecha_nombramiento date
  vigencia_poder date [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table datos_proveedores {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  nombre_comercial varchar(255) [null]
  pagina_web varchar(255) [null]
  numero_empleados int [null]
  fecha_inicio_operaciones date [null]
  descripcion_actividades text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table contactos {
  id bigint [pk, increment]
  nombre varchar(255)
  apellido_paterno varchar(255)
  apellido_materno varchar(255) [null]
  cargo varchar(255) [null]
  telefono varchar(20) [null]
  email varchar(255) [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table accionistas {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  nombre varchar(255)
  apellido_paterno varchar(255)
  apellido_materno varchar(255) [null]
  rfc varchar(13)
  curp varchar(18) [null]
  porcentaje_participacion decimal(5,2)
  tipo_accionista enum('persona_fisica', 'persona_moral')
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table actividades {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  actividad_id bigint [ref: > actividad.id]
  es_principal boolean [default: false]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table archivos {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  catalogo_archivo_id bigint [ref: > catalogo_archivos.id]
  nombre_original varchar(255)
  nombre_archivo varchar(255)
  ruta_archivo varchar(500)
  tipo_mime varchar(100)
  tamaño_archivo bigint
  fecha_subida timestamp [default: `CURRENT_TIMESTAMP`]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table cita {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  user_id bigint [ref: > users.id]
  fecha_cita datetime
  motivo varchar(255)
  estatus enum('programada', 'confirmada', 'cancelada', 'completada') [default: 'programada']
  observaciones text [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table notificacion {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  titulo varchar(255)
  mensaje text
  tipo enum('info', 'warning', 'error', 'success') [default: 'info']
  leida boolean [default: false]
  fecha_envio timestamp [default: `CURRENT_TIMESTAMP`]
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table proveedor_contactos {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedores.id]
  contacto_id bigint [ref: > contactos.id]
  tipo_contacto enum('principal', 'secundario', 'emergencia') [default: 'principal']
  created_at timestamp [null]
  updated_at timestamp [null]
}

// Logs and Activity Tables
Table logs {
  id bigint [pk, increment]
  level varchar(255)
  message text
  context json [null]
  created_at timestamp [null]
}

Table activity_log {
  id bigint [pk, increment]
  log_name varchar(255) [null]
  description text
  subject_type varchar(255) [null]
  event varchar(255) [null]
  subject_id bigint [null]
  causer_type varchar(255) [null]
  causer_id bigint [null]
  properties json [null]
  batch_uuid char(36) [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

// Permission Tables (Spatie Laravel Permission)
Table permissions {
  id bigint [pk, increment]
  name varchar(255)
  guard_name varchar(255)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table roles {
  id bigint [pk, increment]
  name varchar(255)
  guard_name varchar(255)
  created_at timestamp [null]
  updated_at timestamp [null]
}

Table model_has_permissions {
  permission_id bigint [ref: > permissions.id]
  model_type varchar(255)
  model_id bigint
}

Table model_has_roles {
  role_id bigint [ref: > roles.id]
  model_type varchar(255)
  model_id bigint
}

Table role_has_permissions {
  permission_id bigint [ref: > permissions.id]
  role_id bigint [ref: > roles.id]
}

// Indexes
Table sessions {
  indexes {
    user_id [name: "sessions_user_id_index"]
    last_activity [name: "sessions_last_activity_index"]
  }
}

Table activity_log {
  indexes {
    (subject_type, subject_id) [name: "subject"]
    (causer_type, causer_id) [name: "causer"]
    log_name [name: "activity_log_log_name_index"]
  }
}

Table model_has_permissions {
  indexes {
    (model_id, model_type) [name: "model_has_permissions_model_id_model_type_index"]
  }
}

Table model_has_roles {
  indexes {
    (model_id, model_type) [name: "model_has_roles_model_id_model_type_index"]
  }
}

// Table Groups for better visualization
TableGroup "User Management" {
  users
  sessions
  password_reset_tokens
  permissions
  roles
  model_has_permissions
  model_has_roles
  role_has_permissions
}

TableGroup "Geographic Data" {
  pais
  estado
  municipio
  localidad
  tipo_asentamiento
  asentamiento
  coordenadas
}

TableGroup "Business Core" {
  proveedores
  tramite
  direcciones
  datos_constitutivos
  datos_proveedores
  accionistas
  actividades
  archivos
}

TableGroup "Business Support" {
  sector
  actividad
  catalogo_archivos
  instrumentos_notariales
  apoderado_legal
  contactos
  proveedor_contactos
  cita
  notificacion
}

TableGroup "System" {
  cache
  cache_locks
  jobs
  job_batches
  failed_jobs
  logs
  activity_log
}